--- a/index.html
+++ b/index.html
@@ -4,10 +4,123 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Mi proyecto en Github</h1>
+    <header></header>
+
+    <h2>Peliculas populares</h2>
+
+    <section class="cajapadre 1" >
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+    </section>
+
+
+    <h2>Series populares</h2>
+
+    <section class="cajapadre 2" >
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+    </section>
+
+
+
+    <h2>Lo mas visto en Peliculas</h2>
+
+    <section class="cajapadre 3" >
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>
+        <article >
+            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p>Titulo: Malefica <br>
+                Fecha de estreno: 00/00/0000
+            </p>
+        </article>     
+    </section>
+
+
+    <footer></footer>
+
+    
 </body>
 </html>
