--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generos</title>
+    <title>Detalle serie</title>
 </head>
 <body>
-    <h1>Generos</h1>
-    
+    <h1>Nombre serie</h1>
+    <img src="" alt="">
+    <p>  Rating:
+        Fecha de estreno:
+        Duracion:
+        Sinopsis:
+        Genero</p>    
 </body>
 </html>
