--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <ul>
+            <a href=""><li>Generos</li></a>
+            <a href=""><li>Favoritos</li></a>
+            <a href=""><li></li></a>
+
+        </ul>
+    </header>
 
     <h2>Peliculas populares</h2>
 
