--- a/index.html
+++ b/index.html
@@ -6,123 +6,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/headerStyles.css">
 </head>
 <body>
+    <!-- Header-->
     <header>
-        <ul>
-            <a href=""><li>Generos</li></a>
-            <a href=""><li>Favoritos</li></a>
-            <a href=""><li></li></a>
-
-        </ul>
+        <nav>
+            <img src="./img/logo.png" class="logo" alt="">
+            <a href="./index.html">Home</a>
+            <a href="">Generos</a>
+            <a href="./favoritos.html">Favoritos</a>
+        </nav>
+       
     </header>
 
-    <h2>Peliculas populares</h2>
+    <h2 class="subtitulo">Peliculas populares</h2>
 
     <section class="cajapadre 1" >
         <article >
             <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <p class="nombrePeli">Titulo: Malefica</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/thor.webp" alt=""> </a>
+            <p class="nombrePeli">Titulo: Thor </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/Top Gun.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Top Gun </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/lightyear.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Lightyear</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/minions.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Minions</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
     </section>
 
 
-    <h2>Series populares</h2>
+    <h2 class="subtitulo">Series populares</h2>
 
     <section class="cajapadre 2" >
         <article >
             <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <p class="nombrePeli">Titulo: Malefica</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/thor.webp" alt=""> </a>
+            <p class="nombrePeli">Titulo: Thor </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/Top Gun.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Top Gun </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/lightyear.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Lightyear</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/minions.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Minions</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
     </section>
 
 
 
-    <h2>Lo mas visto en Peliculas</h2>
+    <h2 class="subtitulo">Lo mas visto en Peliculas</h2>
 
     <section class="cajapadre 3" >
         <article >
             <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <p class="nombrePeli">Titulo: Malefica</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/thor.webp" alt=""> </a>
+            <p class="nombrePeli">Titulo: Thor </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/Top Gun.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Top Gun </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
+            <a href="http://"> <img src="./img/lightyear.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Lightyear</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
-            <p>Titulo: Malefica <br>
-                Fecha de estreno: 00/00/0000
-            </p>
-        </article>     
+            <a href="http://"> <img src="./img/minions.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Minions</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+        </article>
     </section>
 
 
