--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -5,8 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Detalle peliculs</title>
 </head>
+
+<header>
+    <nav>
+        <img src="./img/logo.png" class="logo" alt="">
+        <a href="./index.html">Home</a>
+        <a href="./genero.html">Generos</a>
+        
+        <a href="./favoritos.html">Favoritos</a>
+    </nav>
+   
+</header>
 
 <body>
     <h1>Nombre Pelicula</h1>
@@ -20,5 +32,12 @@
     </p>
 
 </body>
+<footer>
+    <h2>
+        <ul>Catalina Arzubiaga</ul>
+    <ul>María Riobó</ul>
+    <ul>Ema Gondell</ul>
 
+    </h2>
+</footer>
 </html>
