--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Detalle serie</title>
 </head>
+
+<header>
+    <nav>
+        <img src="./img/logo.png" class="logo" alt="">
+        <a href="./index.html">Home</a>
+        <a href="./genero.html">Generos</a>
+        <a href="./favoritos.html">Favoritos</a>
+    </nav>
+   
+</header>
 <body>
     <h1>Nombre serie</h1>
     <img src="" alt="">
@@ -15,4 +26,12 @@
         Sinopsis:
         Genero</p>    
 </body>
+<footer>
+    <h2>
+        <ul>Catalina Arzubiaga</ul>
+    <ul>María Riobó</ul>
+    <ul>Ema Gondell</ul>
+
+    </h2>
+</footer>
 </html>
