detalle pelicula, footer

--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -22,11 +22,11 @@
 </body>
 
 <footer>
-    <h2>
-        <ul>Catalina Arzubiaga</ul>
-    <ul>María Riobó</ul>
-    <ul>Ema Gondell</ul>
-
-    </h2>
+    <p>Creadores de esta página:</p>
+    <ul>
+        <li>Catalina Arzubiaga</li>
+        <li>Maria Riobó</li>
+        <li>Ema Gondell</li>
+    </ul>
 </footer>
 </html>
