--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
 
     <section class="cajapadre 1" >
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/thor.webp" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/thor.webp" alt=""> </a>
             <p class="nombrePeli">Titulo: Thor </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/Top Gun.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/Top Gun.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Top Gun </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/lightyear.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/lightyear.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Lightyear</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/minions.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/minions.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Minions</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
@@ -106,7 +106,7 @@
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="http://"> <img src="./img/minions.jpeg" alt=""> </a>
+            <a href="./"> <img src="./img/minions.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Minions</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
@@ -115,9 +115,11 @@
 
     <footer>
         <p>Creadores de esta página:</p>
-        <ul>Catalina Arzubiaga</ul>
-        <ul>María Riobó</ul>
-        <ul>Ema Gondell</ul>
+        <ul>
+            <li>Catalina Arzubiaga</li>
+            <li>Maria Riobó</li>
+            <li>Ema Gondell</li>
+        </ul>
     </footer>
 
     
