--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
     <title>Detalle peliculs</title>
 </head>
 
@@ -14,30 +17,34 @@
         <img src="./img/logo.png" class="logo" alt="">
         <a href="./index.html">Home</a>
         <a href="./genero.html">Generos</a>
-        
+
         <a href="./favoritos.html">Favoritos</a>
     </nav>
-   
+
 </header>
 
 <body>
-    <h1>Nombre Pelicula</h1>
-    <img src="" alt="">
+    <h1>Lightyear</h1>
+    <img src="./img/lightyear.jpeg" alt="">
     <p>
-        Rating:
-        Fecha de estreno:
-        Duracion:
-        Sinopsis:
-        Genero
+        Rating: 75 % <br>
+        Fecha de estreno: 17 de junio de 2022 (Estados Unidos) <br>
+        Duracion: 100 min <br>
+        Sinopsis: La historia del origen de Buzz Lightyear, el héroe que inspiró el juguete, y que nos da a conocer al
+        legendario Guardián Espacial que acabaría contando con generaciones de fans. <br>
+        Genero: Animación. Aventuras. Ciencia ficción. Comedia | Cine familiar. Aventura espacial. Robots. Pixar.
+        Spin-off <br>
     </p>
 
 </body>
-<footer>
-    <h2>
-        <ul>Catalina Arzubiaga</ul>
-    <ul>María Riobó</ul>
-    <ul>Ema Gondell</ul>
 
-    </h2>
+<footer>
+    <p>Creadores de esta página:</p>
+    <ul>
+        <li>Catalina Arzubiaga</li>
+        <li>Maria Riobó</li>
+        <li>Ema Gondell</li>
+    </ul>
 </footer>
+
 </html>
