--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -27,11 +27,12 @@
         Genero</p>    
 </body>
 <footer>
-    <h2>
-        <ul>Catalina Arzubiaga</ul>
-    <ul>María Riobó</ul>
-    <ul>Ema Gondell</ul>
-
-    </h2>
+    <p>Creadores de esta página:</p>
+    <ul>
+        <li>Catalina Arzubiaga</li>
+        <li>Maria Riobó</li>
+        <li>Ema Gondell</li>
+    </ul>
 </footer>
+
 </html>
