--- a/resultados.html
+++ b/resultados.html
@@ -20,11 +20,10 @@
     
 </body>
 <footer>
-    <h2>
-        <ul>Catalina Arzubiaga</ul>
-    <ul>María Riobó</ul>
-    <ul>Ema Gondell</ul>
-
-    </h2>
-</footer>
-</html>
+    <p>Creadores de esta página:</p>
+    <ul>
+        <li>Catalina Arzubiaga</li>
+        <li>Maria Riobó</li>
+        <li>Ema Gondell</li>
+    </ul>
+</footer></html>
