--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -9,42 +9,60 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
-    <title>Detalle peliculs</title>
+    <title>Detalle pelicula</title>
 </head>
 
-<header>
-    <nav>
-        <img src="./img/logo.png" class="logo" alt="">
-        <a href="./index.html">Home</a>
-        <a href="./genero.html">Generos</a>
 
-        <a href="./favoritos.html">Favoritos</a>
-    </nav>
-
-</header>
 
 <body>
-    <h1>Lightyear</h1>
-    <img src="./img/lightyear.jpeg" alt="">
-    <p>
-        Rating: 75 % <br>
-        Fecha de estreno: 17 de junio de 2022 (Estados Unidos) <br>
-        Duracion: 100 min <br>
-        Sinopsis: La historia del origen de Buzz Lightyear, el héroe que inspiró el juguete, y que nos da a conocer al
-        legendario Guardián Espacial que acabaría contando con generaciones de fans. <br>
-        Genero: Animación. Aventuras. Ciencia ficción. Comedia | Cine familiar. Aventura espacial. Robots. Pixar.
-        Spin-off <br>
-    </p>
+    <header>
+        <nav>
+            <img src="./img/logo.png" class="logo" alt="">
+            <a href="./index.html">Home</a>
+            <a href="./genero.html">Generos</a>
+    
+            <a href="./favoritos.html">Favoritos</a>
+        </nav>
+    
+    </header>
+
+    <main>
+        <section class="section">
+            <article class="articlePoster">
+                <img src="./img/lightyear.jpeg" alt="" class="poster">
+            </article>
+            <article class="article">
+                <h1 class="tituloPelicula">Lightyear</h1>
+                <h2 class="fecha">Fehca de estreno: 17 de junio de 2022 </h2>
+                <p class="descripcionPelicula">Sinopsis: La historia del origen de Buzz Lightyear, el héroe que inspiró el juguete, y que nos da a conocer al legendario Guardián Espacial que acabaría contando con generaciones de fans. </p>
+                <p class="generoPelicula">Genero: Animación. Aventuras. Ciencia ficción. Comedia | Cine familiar. Aventura espacial. Robots. Pixar.
+                    Spin-off</p>
+                    <p class="duracion"> Duracion: 105min</p>
+                    <p class="rating">Rating: 75 %</p>
+            </article>
+            <article class="articleIcono">
+                <img src="./img/amor.png" alt="" class="iconoCorazon">
+            </article>
+        </section>
+    </main>
+   
 
 </body>
 
-<footer>
-    <p>Creadores de esta página:</p>
-    <ul>
-        <li>Catalina Arzubiaga</li>
-        <li>Maria Riobó</li>
-        <li>Ema Gondell</li>
-    </ul>
+<!-- Footer -->
+
+<footer class="footer">
+    <article class="listaFooter">
+        <h3 class="creadoras">Creadores de esta página:</h3>
+        <li class="elementoFooter">
+            <p class="nombreCreador"> Catalina de Arzubiaga</p>
+        </li>
+        <li class="elementoFooter">
+            <p class="nombreCreador">Maria Riobó</p></li>
+        <li class="elementoFooter">
+            <p class="nombreCreador">Ema Gondell</p></li>
+    </article>
+  
 </footer>
 
 </html>
