--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
         <article >
-            <a href="./detalle-serie.html"> <img src="./img/stranger things.png" alt=""> </a>
+            <a href="./detalle-serie.html"> <img src="./img/stranger.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Stranger Things</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
         </article>
