--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -33,7 +33,7 @@
             </article>
             <article class="article">
                 <h1 class="tituloPelicula">Lightyear</h1>
-                <h2 class="fecha">Fehca de estreno: 17 de junio de 2022 </h2>
+                <h2 class="fecha">Fecha de estreno: 17 de junio de 2022 </h2>
                 <p class="descripcionPelicula">Sinopsis: La historia del origen de Buzz Lightyear, el héroe que inspiró el juguete, y que nos da a conocer al legendario Guardián Espacial que acabaría contando con generaciones de fans. </p>
                 <p class="generoPelicula">Genero: Animación. Aventuras. Ciencia ficción. Comedia | Cine familiar. Aventura espacial. Robots. Pixar.
                     Spin-off</p>
