trabajo en clase

--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -20,10 +20,14 @@
             <img src="./img/logo.png" class="logo" alt="">
             <a href="./index.html">Home</a>
             <a href="./genero.html">Generos</a>
-    
             <a href="./favoritos.html">Favoritos</a>
         </nav>
-    
+        <form action="resultados.html" method="get" class="formulario">
+            <label for="" class="palabraBuscador">Buscar pelicula o serie:</label>
+            <input type="text" name="buscar" value="">
+            <button type="submit">Buscar</button>
+        </form>
+
     </header>
 
     <main>
