--- a/genero.html
+++ b/genero.html
@@ -14,11 +14,52 @@
         <a href="./genero.html">Generos</a>
         <a href="./favoritos.html">Favoritos</a>
     </nav>
-   
+     <!--Formulario de busqueda-->
+     <form action="resultados.html" method="get" class="formulario">
+        <label for="">Buscar pelicula o serie:</label>
+        <input type="text" name="buscar" value="">
+        <button type="submit">Buscar</button>
+    </form>
+
 </header>
 <body>
     
-</body>
+    <main class="contenedorGenero">
+        <h2 class="tituloGenero"> Generos Peliculas:</h2>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Familiares </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Comedia </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Ciencia ficción </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Fantasía </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Aventura </a>
+        </li>
+</main>
+<main class="contenedorGenero">
+        <h2 class="tituloGeneroSeries"> Generos Series:</h2>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Familiares </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Comedia </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Ciencia ficción </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Fantasía </a>
+        </li>
+        <li class="listaGenero"> 
+            <a href="./detalle-genero.html"> Aventura </a>
+        </li>
+    </main>
 
 <!-- Footer -->
 
