--- a/favoritos.html
+++ b/favoritos.html
@@ -15,6 +15,13 @@
         <a href="./favoritos.html">Favoritos</a>
     </nav>
    
+  <!--Formulario de busqueda-->
+  <form action="resultados.html" method="get" class="formulario">
+    <label for="">Buscar pelicula o serie:</label>
+    <input type="text" name="buscar" value="">
+    <button type="submit">Buscar</button>
+</form>
+
 </header>
 <body>
 
