--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             <a href="./genero.html">Generos</a>
             <a href="./favoritos.html">Favoritos</a>
         </nav>
-       
+        <form action="resultados.html" method="get" class="formulario">
+            <label for="" class="palabraBuscador">Buscar pelicula o serie:</label>
+            <input type="text" name="buscar" value="">
+            <button type="submit">Buscar</button>
+        </form>
+
     </header>
 
     <!-- Subtitulo 1-->
@@ -27,26 +32,41 @@
             <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/thor.webp" alt=""> </a>
             <p class="nombrePeli">Titulo: Thor </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/Top Gun.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Top Gun </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/lightyear.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Lightyear</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/minions.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Minions</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
     </section>
 
@@ -58,26 +78,41 @@
             <a href="./detalle-serie.html"> <img src="./img/friends.png" alt=""> </a>
             <p class="nombrePeli">Titulo: Friends</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-serie.html"> <img src="./img/big bang theory.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Big Bang Theory </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-serie.html"> <img src="./img/hawkeye.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Hawkeye </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-serie.html"> <img src="./img/Pretty little liars.jpg" alt=""> </a>
             <p class="nombrePeli">Titulo: Pretty Little Liars</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-serie.html"> <img src="./img/stranger.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Stranger Things</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
     </section>
 
@@ -90,26 +125,41 @@
             <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/thor.webp" alt=""> </a>
             <p class="nombrePeli">Titulo: Thor </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/Top Gun.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Top Gun </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/lightyear.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Lightyear</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/minions.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Minions</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
     </section>
 
