--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Generos</title>
 </head>
+
+<body>
 <header>
     <nav>
         <img src="./img/logo.png" class="logo" alt="">
@@ -22,8 +24,103 @@
     </form>
    
 </header>
-<body>
-   
+
+<h1 class="tituloResultado">Genero: Fantasía</h1> 
+<h1 class="oculta">No se encontraron resultados de busqueda</h1>
+
+    <!-- Subtitulo 1-->
+    <h2 class="subtitulo">Peliculas de fantasía encontradas</h2>
+
+    <section class="cajapadre 1" >
+        <article >
+            <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Malefica</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-pelicula.html"> <img src="./img/thor.webp" alt=""> </a>
+            <p class="nombrePeli">Titulo: Thor </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-pelicula.html"> <img src="./img/Top Gun.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Top Gun </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-pelicula.html"> <img src="./img/lightyear.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Lightyear</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-pelicula.html"> <img src="./img/minions.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Minions</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+    </section>
+
+<!-- Subtitulo 2-->
+    <h2 class="subtitulo">Series de fantasía encontradas</h2>
+
+    <section class="cajapadre 2" >
+        <article >
+            <a href="./detalle-serie.html"> <img src="./img/friends.png" alt=""> </a>
+            <p class="nombrePeli">Titulo: Friends</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-serie.html"> <img src="./img/big bang theory.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Big Bang Theory </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-serie.html"> <img src="./img/hawkeye.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Hawkeye </p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-serie.html"> <img src="./img/Pretty little liars.jpg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Pretty Little Liars</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+        <article >
+            <a href="./detalle-serie.html"> <img src="./img/stranger.jpeg" alt=""> </a>
+            <p class="nombrePeli">Titulo: Stranger Things</p>
+            <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-serie.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
+        </article>
+    </section>
+
+
     
 </body>
 
