--- a/favoritos.html
+++ b/favoritos.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Favoritos</title>
 </head>
+
+<body>
 <header>
     <nav>
         <img src="./img/logo.png" class="logo" alt="">
@@ -23,36 +25,52 @@
 </form>
 
 </header>
-<body>
+
 
     <h2 class="subtitulo">NUESTROS FAVORITOS:</h2>
     <section class="cajapadre 1" >
         <article >
-            <a href="http://"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
-            <a href="http://"> <img src="./img/thor.webp" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/thor.webp" alt=""> </a>
             <p class="nombrePeli">Titulo: Thor </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
-            <a href="http://"> <img src="./img/Top Gun.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/Top Gun.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Top Gun </p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
-            <a href="http://"> <img src="./img/lightyear.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/lightyear.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Lightyear</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
         <article >
-            <a href="http://"> <img src="./img/minions.jpeg" alt=""> </a>
+            <a href="./detalle-pelicula.html"> <img src="./img/minions.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Minions</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
+            <form action="detalle-pelicula.html">
+                <button type="" class="verMas">Ver más</button>
+            </form>
         </article>
     </section>
+
     
 </body>
 
