--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -56,19 +56,12 @@
 </body>
 
 <!-- Footer -->
-
-<footer class="footer">
-    <article class="listaFooter">
-        <h3 class="creadoras">Creadores de esta página:</h3>
-        <li class="elementoFooter">
-            <p class="nombreCreador"> Catalina de Arzubiaga</p>
-        </li>
-        <li class="elementoFooter">
-            <p class="nombreCreador">Maria Riobó</p></li>
-        <li class="elementoFooter">
-            <p class="nombreCreador">Ema Gondell</p></li>
-    </article>
-  
+<footer>
+    <p>Creadores de esta página:</p>
+    <ul>
+        <li>Catalina Arzubiaga</li>
+        <li>Maria Riobó</li>
+        <li>Ema Gondell</li>
+    </ul>
 </footer>
-
 </html>
