--- a/index.html
+++ b/index.html
@@ -168,12 +168,17 @@
     </section>
 </body>
 <!-- Footer -->
-<footer>
-    <p>Creadores de esta página:</p>
-    <ul>
-        <li>Catalina Arzubiaga</li>
-        <li>Maria Riobó</li>
-        <li>Ema Gondell</li>
-    </ul>
+<footer class="footer">
+    <article class="listaFooter">
+     <h3 class="creadoras">Integrantes:</h3>  
+        <li class="elementoFooter">
+            <p class="nombreCreador"> Catalina de Arzubiaga</p>
+        </li>
+        <li class="elementoFooter">
+            <p class="nombreCreador"> Maria Riobó</p>
+</li>
+        <li class="elementoFooter">
+            <p class="nombreCreador"> Ema Gondell</p></li>
+</article>
 </footer>  
 </html>
