--- a/favoritos.html
+++ b/favoritos.html
@@ -75,13 +75,13 @@
 </body>
 
 <!-- Footer -->
-<footer>
-    <p>Creadores de esta página:</p>
-    <ul>
-        <li>Catalina Arzubiaga</li>
-        <li>Maria Riobó</li>
-        <li>Ema Gondell</li>
-    </ul>
+<footer class="footer">
+    <p class="creadoras" >Creadores de esta página:</p>
+        <ul  class="footer ul">
+            <li class="elementoFooter " >Catalina Arzubiaga</li>
+            <li class="elementoFooter" >Maria Riobó</li>
+            <li class="elementoFooter " >Ema Gondell</li>
+        </ul>
 </footer>
 
 </html>
