--- a/index.html
+++ b/index.html
@@ -170,15 +170,14 @@
 <!-- Footer -->
 <footer class="footer">
     <article class="listaFooter">
-     <h3 class="creadoras">Integrantes:</h3>  
-        <li class="elementoFooter">
-            <p class="nombreCreador"> Catalina de Arzubiaga</p>
-        </li>
-        <li class="elementoFooter">
-            <p class="nombreCreador"> Maria Riobó</p>
-</li>
-        <li class="elementoFooter">
-            <p class="nombreCreador"> Ema Gondell</p></li>
-</article>
+        <h3 class="creadoras">Integrantes:</h3>  
+        <ul> 
+            <li class="elementoFooter"> Catalina de Arzubiaga</li>
+    
+            <li class="elementoFooter">Maria Riobó</li>
+    
+         <li class="elementoFooter">Ema Gondell</li>
+        </ul>
+    </article>
 </footer>  
 </html>
