--- a/index.html
+++ b/index.html
@@ -168,16 +168,11 @@
     </section>
 </body>
 <!-- Footer -->
-<footer class="footer">
-    <article class="listaFooter">
-        <h3 class="creadoras">Integrantes:</h3>  
-        <ul> 
-            <li class="elementoFooter"> Catalina de Arzubiaga</li>
-    
-            <li class="elementoFooter">Maria Riobó</li>
-    
-         <li class="elementoFooter">Ema Gondell</li>
-        </ul>
-    </article>
-</footer>  
+<footer>
+    <ul>
+        <li> Catalina Arzubiaga</li>
+        <li> Maria Riobó</li>
+        <li>Ema Gondell</li>
+    </ul>
+</footer> 
 </html>
