--- a/favoritos.html
+++ b/favoritos.html
@@ -75,13 +75,12 @@
 </body>
 
 <!-- Footer -->
-<footer class="footer">
-    <p class="creadoras" >Creadores de esta página:</p>
-        <ul  class="footer ul">
-            <li class="elementoFooter " >Catalina Arzubiaga</li>
-            <li class="elementoFooter" >Maria Riobó</li>
-            <li class="elementoFooter " >Ema Gondell</li>
-        </ul>
-</footer>
+<footer>
+    <ul>
+        <li> Catalina Arzubiaga</li>
+        <li> Maria Riobó</li>
+        <li>Ema Gondell</li>
+    </ul>
+</footer> 
 
 </html>
