archivos linkeados al js

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             </form>
         </article>
     </section>
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 <!-- Footer -->
 <footer>
