--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -52,7 +52,7 @@
         </section>
     </main>
    
-
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
 <!-- Footer -->
