--- a/favoritos.html
+++ b/favoritos.html
@@ -71,7 +71,7 @@
         </article>
     </section>
 
-    
+    <script type="text/javascript" src="./js/index.js"></script>  
 </body>
 
 <!-- Footer -->
