--- a/genero.html
+++ b/genero.html
@@ -69,6 +69,7 @@
         </ul>
     </div>
 </section>
+<script type="text/javascript" src="./js/index.js"></script>
 </body>
 <!-- Footer -->
 <footer>
