--- a/resultados.html
+++ b/resultados.html
@@ -118,7 +118,7 @@
         </article>
     </section>
 
-
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 <!-- Footer -->
 <footer>
