--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <form action="resultados.html" method="get" class="formulario">
             <label for="" class="palabraBuscador">Buscar pelicula o serie:</label>
-            <input type="text" name="buscar" value="">
+            <input type="text" name="busqueda" value="">
             <button type="submit">Buscar</button>
         </form>
 
