--- a/genero.html
+++ b/genero.html
@@ -20,7 +20,7 @@
          <!--Formulario de busqueda-->
          <form action="resultados.html" method="get" class="formulario">
             <label for="">Buscar pelicula o serie:</label>
-            <input type="text" name="buscar" value="">
+            <input type="text" name="busqueda" value="">
             <button type="submit">Buscar</button>
         </form>
     
@@ -76,7 +76,7 @@
         <li>Ema Gondell</li>
     </ul>
     </footer> 
-<script type="text/javascript" src="./js/index.js"></script>
+<script type="text/javascript" src="./js/genero.js"></script>
 </body>
 <!-- Footer -->
 
