--- a/resultados.html
+++ b/resultados.html
@@ -18,7 +18,7 @@
         </nav>
         <form action="resultados.html" method="get" class="formulario">
             <label for="" class="palabraBuscador">Buscar pelicula o serie:</label>
-            <input type="text" name="buscar" value="">
+            <input type="text" name="busqueda" value="">
             <button type="submit">Buscar</button>
         </form>
 
@@ -124,7 +124,7 @@
         <li>Ema Gondell</li>
     </ul>
     </footer> 
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/resultados.js"></script>
 </body>
 <!-- Footer -->
 
