--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -26,7 +26,7 @@
         </nav>
         <form action="resultados.html" method="get" class="formulario">
             <label for="" class="palabraBuscador">Buscar pelicula o serie:</label>
-            <input type="text" name="buscar" value="">
+            <input type="text" name="busqueda" value="">
             <button type="submit">Buscar</button>
         </form>
 
@@ -58,7 +58,7 @@
         <li>Ema Gondell</li>
     </ul>
     </footer> 
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/detalle-pelicula.js"></script>
 </body>
 
 <!-- Footer -->
