--- a/favoritos.html
+++ b/favoritos.html
@@ -20,7 +20,7 @@
   <!--Formulario de busqueda-->
   <form action="resultados.html" method="get" class="formulario">
     <label for="">Buscar pelicula o serie:</label>
-    <input type="text" name="buscar" value="">
+    <input type="text" name="busqueda" value="">
     <button type="submit">Buscar</button>
 </form>
 
@@ -77,7 +77,7 @@
         <li>Ema Gondell</li>
     </ul>
     </footer> 
-    <script type="text/javascript" src="./js/index.js"></script>  
+    <script type="text/javascript" src="./js/favoritos.js"></script>  
 </body>
 
 <!-- Footer -->
