--- a/resultados.html
+++ b/resultados.html
@@ -30,7 +30,7 @@
     <h2 class="subtitulo">Peliculas encontradas</h2>
 
     <section class="cajapadre 1" >
-        <article >
+        <article>
             <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
@@ -72,7 +72,7 @@
         </article>
     </section>
 
-<!-- Subtitulo 2-->
+<!-- Subtitulo 2
     <h2 class="subtitulo">Series encontradas</h2>
 
     <section class="cajapadre 2" >
@@ -116,7 +116,7 @@
                 <button type="" class="verMas">Ver más</button>
             </form>
         </article>
-    </section>
+    </section> -->
     <footer>
     <ul>
         <li> Catalina Arzubiaga</li>
