--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -33,22 +33,8 @@
     </header>
 
     <main>
-        <section class="section">
-            <article class="articlePoster">
-                <img src="./img/lightyear.jpeg" alt="" class="poster">
-            </article>
-            <article class="article">
-                <h1 class="tituloPelicula">Lightyear</h1>
-                <h2 class="fecha">Fecha de estreno: 17 de junio de 2022 </h2>
-                <p class="descripcionPelicula">Sinopsis: La historia del origen de Buzz Lightyear, el héroe que inspiró el juguete, y que nos da a conocer al legendario Guardián Espacial que acabaría contando con generaciones de fans. </p>
-                <p class="generoPelicula">Genero: Animación. Aventuras. Ciencia ficción. Comedia | Cine familiar. Aventura espacial. Robots. Pixar.
-                    Spin-off</p>
-                    <p class="duracion"> Duracion: 105min</p>
-                    <p class="rating">Rating: 75 %</p>
-            </article>
-            <article class="articleIcono">
-                <img src="./img/amor.png" alt="" class="iconoCorazon">
-            </article>
+        <section class="sectionDetPeliculas">
+           
         </section>
     </main>
    <footer>
