cambios en clase

--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -126,6 +126,7 @@
         <li> Maria Riobó</li>
         <li>Ema Gondell</li>
     </ul>
+    <img src="./img/logo.svg" alt="" class="imgFooter">
     </footer> 
     <script type="text/javascript" src="./js/detalle-genero.js"></script>
 </body>
