--- a/favoritos.html
+++ b/favoritos.html
@@ -76,11 +76,12 @@
         <li> Maria Riobó</li>
         <li>Ema Gondell</li>
     </ul>
+    <img src="./img/logo.svg" alt="" class="imgFooter">
+
     </footer> 
     <script type="text/javascript" src="./js/favoritos.js"></script>  
 </body>
 
-<!-- Footer -->
 
 
 </html>
