--- a/genero.html
+++ b/genero.html
@@ -75,10 +75,11 @@
         <li> Maria Riobó</li>
         <li>Ema Gondell</li>
     </ul>
+    <img src="./img/logo.svg" alt="" class="imgFooter">
+
     </footer> 
 <script type="text/javascript" src="./js/genero.js"></script>
 </body>
-<!-- Footer -->
 
 
 </html>
