--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li> Maria Riobó</li>
             <li>Ema Gondell</li>
         </ul>
+        <img src="./img/logo.svg" alt="" class="imgFooter">
     </footer>
     <script type="text/javascript" src="./js/index.js"></script>
 </body>
