--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -43,6 +43,8 @@
         <li> Maria Riobó</li>
         <li>Ema Gondell</li>
     </ul>
+    <img src="./img/logo.svg" alt="" class="imgFooter">
+
     </footer> 
     <script type="text/javascript" src="./js/detalle-pelicula.js"></script>
 </body>
