--- a/resultados.html
+++ b/resultados.html
@@ -27,7 +27,7 @@
 <h1 class="oculta">No se encontraron resultados de busqueda</h1>
 
     <!-- Subtitulo 1-->
-    <h2 class="subtitulo">Peliculas encontradas</h2>
+     <!-- <h2 class="subtitulo">Peliculas encontradas</h2> -->
 
     <section class="cajapadre 1" >
         <article>
@@ -123,11 +123,11 @@
         <li> Maria Riobó</li>
         <li>Ema Gondell</li>
     </ul>
+    <img src="./img/logo.svg" alt="" class="imgFooter">
+
     </footer> 
     <script type="text/javascript" src="./js/resultados.js"></script>
 </body>
-<!-- Footer -->
-
 
 
 </html>
