--- a/resultados.html
+++ b/resultados.html
@@ -26,10 +26,13 @@
 <h1 class="tituloResultado">Resultado de busqueda: Top Gun</h1> 
 <h1 class="oculta">No se encontraron resultados de busqueda</h1>
 
+<section class="formatoSection">
+    <img src="./img/Copia de load.gif" class="gif">
+</section>
     <!-- Subtitulo 1-->
      <!-- <h2 class="subtitulo">Peliculas encontradas</h2> -->
 
-    <section class="cajapadre 1" >
+   <!-- <section class="cajapadre 1" >
         <article>
             <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
@@ -70,7 +73,7 @@
                 <button type="" class="verMas">Ver más</button>
             </form>
         </article>
-    </section>
+    </section> -->
 
 <!-- Subtitulo 2
     <h2 class="subtitulo">Series encontradas</h2>
