cambio en el gif

--- a/genero.html
+++ b/genero.html
@@ -30,7 +30,7 @@
  <section class="containerGenero">
     <div class="generoPrueba">
         <h2 class="tituloGenero"> Generos Peliculas:</h2>
-        <ul>
+        <ul class="listaPeliculas">
             <li class="listaGenero"> 
                 <a href="./detalle-genero.html" class="genero"> Familiares </a>
             </li>
@@ -46,7 +46,7 @@
             <li class="listaGenero"> 
                 <a href="./detalle-genero.html" class="genero"> Aventura </a>
             </li>
-        </ul>
+        </ul> 
     </div>
     <div class="seriesPrueba">
         <h2 class="tituloGenero"> Generos Series:</h2>
