--- a/resultados.html
+++ b/resultados.html
@@ -27,7 +27,7 @@
 <h1 class="oculta">No se encontraron resultados de busqueda</h1>
 
 <section class="formatoSection">
-    <img src="./img/Copia de load.gif" class="gif">
+    <img src="./img/loading.gif" class="gif">
 </section>
     <!-- Subtitulo 1-->
      <!-- <h2 class="subtitulo">Peliculas encontradas</h2> -->
