--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -29,7 +29,7 @@
         </header>
     
         <main>
-            <section class="section" id="sectionDetSeries" >
+            <section class="sectionDetSeries" id="sectionDetSeries" >
               
             </section>
         </main>
