--- a/genero.html
+++ b/genero.html
@@ -27,8 +27,11 @@
     </header>
  <!--Lista de generos-->   
 <h2>Generos Peliculas</h2>
- <section class="containerGenero">
-       
+ <section class="containerGeneroSeries">
+       <h3> Series </h3>
+</section>
+<section class="containeGenero">
+    <h3> Peliculas </h3>
 </section>
 
     <footer>
