--- a/genero.html
+++ b/genero.html
@@ -26,13 +26,17 @@
     
     </header>
  <!--Lista de generos-->   
-<h2>Generos Peliculas</h2>
- <section class="containerGeneroSeries">
-       <h3> Series </h3>
+<section class="containerGenero">
+    <div class="generoPrueba">
+        <h2 class="tituloGenero"> Generos Peliculas:</h2>
+    
+    </div>
+    <div class="seriesPrueba">
+        <h2 class="tituloGenero"> Generos Series:</h2>
+   
+    </div>
 </section>
-<section class="containeGenero">
-    <h3> Peliculas </h3>
-</section>
+
 
     <footer>
     <ul>
