avance en favoritoa

--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -36,6 +36,9 @@
         <section class="sectionDetPeliculas">
            
         </section>
+        <article class="articleIcono">
+            <img src="./img/amor.png" alt="" class="iconoCorazon">
+        </article>`
     </main>
    <footer>
     <ul>
