--- a/detalle-genero.html
+++ b/detalle-genero.html
@@ -27,12 +27,10 @@
 
 <h1 class="tituloResultado">Genero: Fantasía</h1> 
 <h2 class="oculta">No se encontraron resultados de busqueda</h2>
+    
 
-    <!-- Subtitulo 1-->
-    <h2 class="subtitulo">Peliculas de fantasía encontradas</h2>
-
-    <section class="cajapadre 1" >
-        <article >
+    <section class="cajapadre1" >
+      <!--  <article >
             <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
             <p>  Fecha de estreno: 00/00/0000 </p>
@@ -71,7 +69,7 @@
             <form action="detalle-pelicula.html">
                 <button type="" class="verMas">Ver más</button>
             </form>
-        </article>
+        </article> -->
     </section>
 
 <!-- Subtitulo 2-->
