--- a/favoritos.html
+++ b/favoritos.html
@@ -13,7 +13,7 @@
     <nav>
         <img src="./img/logo.png" class="logo" alt="">
         <a href="./index.html">Home</a>
-        <a href="">Generos</a>
+        <a href="./genero.html">Generos</a>
         <a href="./favoritos.html">Favoritos</a>
     </nav>
    
