--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -12,7 +12,7 @@
     <title>Detalle pelicula</title>
 </head>
 
-
+<a href="./detalle-genero.html?id=${id}"> Generos:</a>
 <body>
     
 
@@ -34,7 +34,17 @@
 
     <main>
         <section class="sectionDetPeliculas">
-           
+            <article class="articlePoster">
+                <img src=" " alt="" class="poster">
+            </article>
+       <article class="article">
+                      <h1 class="tituloPelicula"></h1>
+                      <h2 class="fecha"> </h2>
+                      <p class="descripcionPelicula"> </p>
+                      <p class="generoPelicula">Genero: </p>
+                          <p class="duracion"> </p>
+                          <p class="rating">R</p>
+                  </article>
         </section>
         <article class="articleIcono">
             <img src="./img/amor.png" alt="" class="iconoCorazon">
