Intento de trailer

--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -12,7 +12,7 @@
     <title>Detalle pelicula</title>
 </head>
 
-<a href="./detalle-genero.html?id=${id}"> Generos:</a>
+
 <body>
     
 
@@ -49,6 +49,9 @@
         <article class="articleIcono">
             <img src="./img/amor.png" alt="" class="iconoCorazon">
         </article>`
+        <div class="divBoton">
+            
+        </div>
     </main>
    <footer>
     <ul>
@@ -57,6 +60,7 @@
         <li>Ema Gondell</li>
     </ul>
     <img src="./img/logo.svg" alt="" class="imgFooter">
+   
 
     </footer> 
     <script type="text/javascript" src="./js/detalle-pelicula.js"></script>
