--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -48,7 +48,10 @@
         </section>
         <article class="articleIcono">
             <img src="./img/amor.png" alt="" class="iconoCorazon">
-        </article>`
+        </article>
+        <article class="boton">
+           
+        </article>
         
     </main>
    <footer>
