--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -42,7 +42,7 @@
                       <h2 class="fecha"> </h2>
                       <p class="descripcionPelicula"> </p>
                       <p class="generoPelicula">Genero: </p>
-                          <p class="duracion"> </p>
+                          <p class="duracion">Minutos: </p>
                           <p class="rating">R</p>
                   </article>
         </section>
@@ -56,7 +56,7 @@
         <li> Maria Riobó</li>
         <li>Ema Gondell</li>
     </ul>
-    <img src="./img/logo.svg" alt="" class="imgFooter">
+    <img src="./img/logo.svg" alt="" class="imgFooter" >
 
     </footer> 
     <script type="text/javascript" src="./js/detalle-pelicula.js"></script>
