--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -42,8 +42,10 @@
                       <h2 class="fecha"> </h2>
                       <p class="descripcionPelicula"> </p>
                       <p class="generoPelicula">Genero: </p>
-                          <p class="duracion">Minutos: </p>
-                          <p class="rating">R</p>
+                      <p class="duracion">Minutos: </p>
+                      <p class="rating">Rating:</p>
+                      <p class="reviews" ></p>
+
                   </article>
         </section>
         <article class="articleIcono">
