--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -34,16 +34,19 @@
                     <img src=" " alt="" class="poster">
                 </article>
            <article class="article">
-                          <h1 class="tituloSeries"></h1>
-                          <h2 class="fecha"> </h2>
-                          <p class="descripcionSerie"> </p>
-                          <p class="generoSerie"> </p>
-                          <p class="duracion">Minutos: </p>
-                          <p class="rating">Rating:</p>
-                          <p class="reviewsSeries"></p>
+                        <h1 class="tituloSeries"></h1>
+                        <h2 class="fecha"> </h2>
+                        <p class="descripcionSerie"> </p>
+                        <p class="generoSerie"> </p>
+                        <p class="duracion">Minutos: </p>
+                        <p class="rating">Rating:</p>
+                        <p class="reviewsSeries"></p>
 
                       </article>
             </section>
+            <article class="boton">
+           
+            </article>
         </main>
        
     <footer>
