Avance en detalles

--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -40,9 +40,12 @@
                         <p class="generoSerie"> </p>
                         <p class="duracion">Minutos: </p>
                         <p class="rating">Rating:</p>
-                        <p class="reviewsSeries"></p>
+                        
 
                       </article>
+           <article class="series"> 
+                <p class="reviewseries">Rating:</p>
+        </article>         
             </section>
             <article class="boton">
            
