--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -47,6 +47,9 @@
                 <p class="reviewseries">Rating:</p>
         </article>         
             </section>
+            <article class="articleIcono">
+                <img src="./img/amor.png" alt="" class="iconoCorazon">
+            </article>
             <article class="boton">
            
             </article>
