--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -51,6 +51,8 @@
 
                   </article>
         </section> 
+        <section id="plataformas">
+        </section>
         <article class="trailer">
            
         </article>
