--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -42,7 +42,8 @@
                         <p class="rating">Rating;</p>
                         <p class="reviewsSerie" ></p>
                 </article>
-                    
+                <section id="plataformas">
+                </section>     
             </section>
             <article class="trailerSeries">
            
